fix(all): talk spec
